--- a/v_clip/pubspec.yaml
+++ b/v_clip/pubspec.yaml
@@ -29,6 +29,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  gradient_text: ^1.0.2
+  web_socket_channel: ^1.1.0
+  bottom_navy_bar: ^5.6.0
+  cool_alert: ^1.0.3
+  slide_popup_dialog: ^0.0.2
+  google_nav_bar: ^3.2.0
+  sqflite:
+  path:
+  path_provider:
+  flare_flutter: ^2.0.6
+  skeleton_text: ^1.0.0
+  sliding_sheet: ^0.4.1
+  floating_action_row: ^0.1.0
+  flutter_screenutil: ^4.0.3
+  google_fonts: ^1.1.2
+  font_awesome_flutter: ^8.11.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,6 +65,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
